--- a/css/habari.css
+++ b/css/habari.css
@@ -22,7 +22,6 @@ li {
 	float: left;
 	padding: 14px 10px 0px 10px;
 	font-size: 19px;
-	
 }
 
 footer{
@@ -43,6 +42,9 @@ footer{
 #nav-list{
 	list-style: none;
 	margin: 0px;
+}
+#ui-id-1, #ui-id-2 {
+	color:#FFffff;
 }
 
 #left{
@@ -76,4 +78,26 @@ footer{
 	margin-top: 50px;
 }
 
+.myinput {
+	width:260px;
+	height: 30px;
+	margin-bottom: 10px;
+	padding:2px 4px;
+}
 
+#sign {
+	width:270px;
+}
+
+#log {
+	width:270px;
+}
+
+.soclog {
+	width:80px;
+	height: 50px;
+	display:inline-block;
+	border:1px solid #DEDEDE;
+	font-size:12px;
+	font-weight: bold;
+}
